Add  first html + css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Главная страница</title>
 </head>
 <body>
-    <h1>Hello World !</h1>
+    <!-- ПЕРВЫЙ БЛОК -->
+    <div class="gov">
+            <img class="gov__star-1" src="img/Star 2.png" alt="star">
+            <img class="gov__star-2" src="img/Star 3.png" alt="Star">
+            <div class="gov__section-form">
+    <!-- ЭЛЕМЕНТЫ СЛЕВА -->
+<img class="gov__section-form-1" src="img/Form star 1 .png" alt="form">
+<img class="gov__section-form-2" src="img/Form star 1.png" alt="form">
+<img class="gov__section-form-3" src="img/Form star 2.png" alt="form">
+<img class="gov__section-form-4" src="img/Form triangle.png" alt="form">
+<img class="gov__section-form-5" src="img/Form vector 1.png" alt="form">
+<img class="gov__section-form-6" src="img/Form vector 2 .png" alt="form">
+<img class="gov__section-form-7" src="img/Form vector 3.png" alt="form">
+<img class="gov__section-form-8" src="img/Form vector 4.png" alt="form">
+            </div>
+    <!-- ТЕКСТОВАЯ ЧАСТЬ -->
+        <div class="gov__section">
+            <h1 class="gov__title">Добро пожаловать <br> на мой сайт мини-игр</h1>
+            <p class="gov__text">Тебе предстоит пройти несколько увлекательных игр. <br> Если готов, нажимай <b> «Поехали!» </b> и <b>приступай.</b></p>
+            <button class="gov__btn">
+                Поехали! 
+            </button>
+        </div>
+        <section class="gov__stripe">
+            <p class="gov__stripe-text">Викторина</p>
+            <img src="img/Stripe star.png" alt="star">
+            <p class="gov__stripe-text">Угадай число</p>
+            <img src="img/Stripe star.png" alt="star">
+            <p class="gov__stripe-text">Переверни текст</p>
+            <img src="img/Stripe star.png" alt="star">
+            <p class="gov__stripe-text">Простая арифметика</p>
+            </section>
+    </div>
+    <!-- ОСНОВНАЯ ЧАСТЬ -->
+    <main>
+    <div class="about" >
+    <div class="about__content">
+              <div class="about__head">
+                  <h1 class="head_title">Об играх</h1>
+                    <p class="head_text">
+                      В моей коллекции представлено 6 игр на разные темы.<br>
+                      Игры несложные — в них может поиграть каждый.<br>
+                      Все игры доступны для пользования.
+                    </p>
+    </div>
+       <!-- КАРТОЧКИ ИГР -->
+    <div class="about__game-box">
+                  <div class="about__game about__game-small">
+                          <img class="about__game_img" src="img/Обложка карточки.png" alt="card1">
+                          <p class="about__game_number">Игра № 1</p>
+                          <h3 class="about__game_name">Угадай число</h3>
+     </div>
+        <div class="about__game about__game-medium">
+                <img class="about__game_img" src="img/Обложка карточки (1).png" alt="card2">
+                <p class="about__game_number">Игра № 2</p>
+                <h3 class="about__game_name">Простая арифметика</h3>
+</div>
+    <div class="about__game about__game-small">
+            <img class="about__game_img" src="img/Обложка карточки (2).png" alt="card3">
+            <p class="about__game_number">Игра № 3</p>
+            <h3 class="about__game_name">Переверни текст</h3>
+</div>
+    <div class="about__game">
+            <img class="about__game_img" src="img/Обложка карточки (3).png" alt="card4">
+            <p class="about__game_number">Игра № 4</p>
+            <h3 class="about__game_name">Камень, <br> ножницы, <br> бумага</h3>
+</div>
+    <div class="about__game about__game-medium">
+            <img class="about__game_img" src="img/Обложка карточки (4).png" alt="card5">
+            <p class="about__game_number">Игра № 5</p>
+            <h3 class="about__game_name">Простая <br> викторина </h3>
+</div>
+<div class="about__game">
+    <img class="about__game_img" src="img/Обложка карточки (5).png" alt="card5">
+    <p class="about__game_number">Игра № 6</p>
+    <h3 class="about__game_name">Генератор случайных <br> цветов </h3>
+</div>
+     </div> 
+     </div>
+          </div>
+        </div>
+      </main>
+      <footer class="footer">
+          <div class="footer__content">
+              <p class="footer__text">Все права защищены.</p>
+          </div>
+      </footer>
 </body>
 </html>
