--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- ПЕРВЫЙ БЛОК -->
-    <div class="gov">
+    <div class="gov center">
             <img class="gov__star-1" src="img/Star 2.png" alt="star">
             <img class="gov__star-2" src="img/Star 3.png" alt="Star">
             <div class="gov__section-form">
@@ -31,7 +31,7 @@
                 Поехали! 
             </button>
         </div>
-        <section class="gov__stripe">
+        <section class="gov__stripe center">
             <p class="gov__stripe-text">Викторина</p>
             <img src="img/Stripe star.png" alt="star">
             <p class="gov__stripe-text">Угадай число</p>
@@ -43,7 +43,7 @@
     </div>
     <!-- ОСНОВНАЯ ЧАСТЬ -->
     <main>
-    <div class="about" >
+    <div class="about center" >
     <div class="about__content">
               <div class="about__head">
                   <h1 class="head_title">Об играх</h1>
@@ -88,9 +88,8 @@
      </div> 
      </div>
           </div>
-        </div>
       </main>
-      <footer class="footer">
+      <footer class="footer center">
           <div class="footer__content">
               <p class="footer__text">Все права защищены.</p>
           </div>
