Add comment + red index es html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="gov center">
             <img class="gov__star-1" src="img/Star 2.png" alt="star">
             <img class="gov__star-2" src="img/Star 3.png" alt="Star">
-            <div class="gov__section-form">
-    <!-- ЭЛЕМЕНТЫ СЛЕВА -->
+    <!-- ЭЛЕМЕНТЫ СЛЕВА 
+    <div class="gov__section-form">
 <img class="gov__section-form-1" src="img/Form star 1 .png" alt="form">
 <img class="gov__section-form-2" src="img/Form star 1.png" alt="form">
 <img class="gov__section-form-3" src="img/Form star 2.png" alt="form">
@@ -22,7 +22,7 @@
 <img class="gov__section-form-6" src="img/Form vector 2 .png" alt="form">
 <img class="gov__section-form-7" src="img/Form vector 3.png" alt="form">
 <img class="gov__section-form-8" src="img/Form vector 4.png" alt="form">
-            </div>
+            </div> -->
     <!-- ТЕКСТОВАЯ ЧАСТЬ -->
         <div class="gov__section">
             <h1 class="gov__title">Добро пожаловать <br> на мой сайт мини-игр</h1>
@@ -31,16 +31,17 @@
                 Поехали! 
             </button>
         </div>
-        <section class="gov__stripe center">
-            <p class="gov__stripe-text">Викторина</p>
-            <img src="img/Stripe star.png" alt="star">
-            <p class="gov__stripe-text">Угадай число</p>
-            <img src="img/Stripe star.png" alt="star">
-            <p class="gov__stripe-text">Переверни текст</p>
-            <img src="img/Stripe star.png" alt="star">
-            <p class="gov__stripe-text">Простая арифметика</p>
-            </section>
+    
     </div>
+    <section class="gov__stripe center">
+        <p class="gov__stripe-text">Викторина</p>
+        <img src="img/Stripe star.png" alt="star">
+        <p class="gov__stripe-text">Угадай число</p>
+        <img src="img/Stripe star.png" alt="star">
+        <p class="gov__stripe-text">Переверни текст</p>
+        <img src="img/Stripe star.png" alt="star">
+        <p class="gov__stripe-text">Простая арифметика</p>
+        </section>
     <!-- ОСНОВНАЯ ЧАСТЬ -->
     <main>
     <div class="about center" >
