Add removed horizontal scroll

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </section>
     <!-- ОСНОВНАЯ ЧАСТЬ -->
     <main>
-    <div class="about center" >
-    <div class="about__content">
+    <div class="about" >
+    <div class="about__content center">
               <div class="about__head">
                   <h1 class="head_title">Об играх</h1>
                     <p class="head_text">
