--- a/index.html
+++ b/index.html
@@ -56,36 +56,36 @@
     </div>
        <!-- КАРТОЧКИ ИГР -->
     <div class="about__game-box">
-                  <div class="about__game about__game-small">
+                  <a class="about__game about__game-small">
                           <img class="about__game_img" src="img/Обложка карточки.png" alt="card1">
                           <p class="about__game_number">Игра № 1</p>
                           <h3 class="about__game_name">Угадай число</h3>
-     </div>
-        <div class="about__game about__game-medium">
+                  </a>
+        <a class="about__game about__game-medium">
                 <img class="about__game_img" src="img/Обложка карточки (1).png" alt="card2">
                 <p class="about__game_number">Игра № 2</p>
                 <h3 class="about__game_name">Простая арифметика</h3>
-</div>
-    <div class="about__game about__game-small">
+</a>
+    <a class="about__game about__game-small">
             <img class="about__game_img" src="img/Обложка карточки (2).png" alt="card3">
             <p class="about__game_number">Игра № 3</p>
             <h3 class="about__game_name">Переверни текст</h3>
-</div>
-    <div class="about__game">
+</a>
+    <a class="about__game">
             <img class="about__game_img" src="img/Обложка карточки (3).png" alt="card4">
             <p class="about__game_number">Игра № 4</p>
             <h3 class="about__game_name">Камень, <br> ножницы, <br> бумага</h3>
-</div>
-    <div class="about__game about__game-medium">
+</a>
+    <a class="about__game about__game-medium">
             <img class="about__game_img" src="img/Обложка карточки (4).png" alt="card5">
             <p class="about__game_number">Игра № 5</p>
             <h3 class="about__game_name">Простая <br> викторина </h3>
-</div>
-<div class="about__game">
+</a>
+<a class="about__game">
     <img class="about__game_img" src="img/Обложка карточки (5).png" alt="card5">
     <p class="about__game_number">Игра № 6</p>
     <h3 class="about__game_name">Генератор случайных <br> цветов </h3>
-</div>
+</a>
      </div> 
      </div>
           </div>
